--- a/index.html
+++ b/index.html
@@ -67,9 +67,17 @@
 
 
 
-										<br>WIP<br>
+										<br>As a data analyst with a strong background in statistics and data visualization, I have a proven track record of delivering actionable insights that drive business growth. 
+										<br><br>
+										With experience in a variety of industries, I have expertise in designing and implementing data-driven solutions to complex problems. My passion for data drives me to continuously learn and stay up-to-date on the latest industry trends and technologies. 
+										<br><br>
+										I am skilled in using tools such as Python, SQL, and Excel to extract, clean, and analyze data, and have a strong understanding of statistical methods and machine learning techniques. I am a team player with excellent communication skills and the ability to clearly present findings to both technical and non-technical audiences. 
+										<br><br>
+										I am seeking a data related role where I can use my skills and experience to make a meaningful impact on the organization.<br>
 
                     </p>
+
+
 
                     <p class="mt-4 mb-4">
 											  <a href="https://github.com/carji" add target="_blank"><i class="fab fa-github fa-3x mr-3 icon"></i></a>
@@ -108,7 +116,7 @@
                         <div class="card-body">
                             <h3>Master's degree in Data Science and Data Engineering</h3>
                             <h5>Universidad de Castilla la Mancha, Spain</h5>
-                            <p>2022</p>
+                            <p>2021-2022</p>
                         </div>
                     </div>
                 </div>
@@ -126,32 +134,56 @@
                 </div>
             </div>
 
-            <div class="row pt-3">
+			<div class="row pt-3">
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <h3>Data Analyst Nanodegree</h3>
-                            <h5>Udacity</h5>
-                            <p>Sept 2021</p>
+                            <h3>Architecting with Google
+								Compute Engine</h3>
+                            <h5>Google | Coursera</h5>
+                            <p>May 2022</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+			<div class="row pt-3">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3>Advanced Machine Learning
+								on GCP</h3>
+								<h5>Google | Coursera</h5>
+                            <p>Oct 2021</p>
                         </div>
                     </div>
                 </div>
             </div>
 
-						<div class="row pt-3">
+			<div class="row pt-3">
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <h3>DP-100 - Designing and Implementing a Data Science Solution on Azure</h3>
-                            <h5>Microsoft</h5>
-                            <p>May 2021</p>
+                            <h3>Data Engineering, Big Data,
+								and Machine Learning on
+								GCP</h3>
+								<h5>Google | Coursera</h5>
+                            <p>Oct 2021</p>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-
+			<div class="row pt-3">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3>	Google Data Analytics</h3>
+								<h5>Google | Coursera</h5>
+                            <p>Aug 2021</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+		
         </div>
     </section>
 
@@ -160,6 +192,32 @@
         <div class="container" data-aos="flip-up">
             <h1 class="abc">Skills</h1>
 
+            <div class="row text-center justify-content-between mb-3">
+                <div class="col-6 col-md-2 plang">
+                    <img src="./Images/Icons/qlik.png" alt="" class="img-fluid img-icon text-center my-3">
+                    <h5>Qlik Sense</h5>
+                </div>
+
+                <div class="col-6 col-md-2 plang">
+                    <img src="./Images/Icons/prefect.svg" alt="" class="img-fluid img-icon text-center my-3">
+                    <h5>Prefect</h5>
+                </div>
+
+                <div class="col-6 col-md-2 plang">
+                    <img src="./Images/Icons/google.png" alt="" class="img-fluid img-icon text-center my-3">
+                    <h5>Google Cloud</h5>
+                </div>
+
+                <div class="col-6 col-md-2 plang">
+                    <img src="./Images/Icons/sql.png" alt="" class="img-fluid img-icon text-center my-3">
+                    <h5>SQL</h5>
+                </div>
+
+                <div class="col-6 col-md-2 plang">
+                    <img src="./Images/Icons/powerbi.svg" alt="" class="img-fluid img-icon text-center my-3">
+                    <h5>Power BI</h5>
+                </div>
+            </div>
             <div class="row text-center justify-content-between mb-3">
                 <div class="col-6 col-md-2 plang">
                     <img src="./Images/Icons/amazonwebservices.svg" alt="" class="img-fluid img-icon text-center my-3">
@@ -282,7 +340,7 @@
     <section id="projects">
         <div class="container" data-aos="zoom-in-up">
             <h1 class="abc pt-5">Projects</h1>
-
+            <div class="row py-3" >
 			<div class="col-lg-6 mb-4">
 				<div class="card">
 						<img class="card-img-top" src="./Images/Projects/vidya.gif" alt="">
@@ -296,7 +354,7 @@
 				</div>
 		</div>
 
-            <div class="row py-3" >
+
                 <div class="col-lg-6 mb-4">
                     <div class="card">
                         <img class="card-img-top" src="./Images/Projects/praw.png" alt="">
@@ -454,11 +512,11 @@
 								</div>
 					</div>
 			</div>
-
+		</div>
 
     <!-- FOOTER -->
   <footer  class = "text-center developers">
-		<p> &copy; carji.tech 2021</p>
+		<p> &copy; carji.es 2023</p>
 	</footer>
 
     <div id="preloader"></div>
